--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the ebook project",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "build": "tsc"
   },
   "keywords": [
     "rest",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@eslint/js": "^9.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
@@ -33,6 +35,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
