--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "docker:publish": "docker build -t chaudhariraj/elib-backend:v2 --platform linux/amd64 . && docker push chaudhariraj/elib-backend:v2"
   },
   "keywords": [
     "rest",
